fixediconalignment

--- a/style.css
+++ b/style.css
@@ -4,8 +4,6 @@
 
 body {
   background-color: var(--primary-color);
-  margin-left: 45px;
-  margin-right: 45px;
 }
 
 #title {
@@ -15,25 +13,11 @@ body {
   color: yellow;
 }
 
-#social {
-  margin-left: auto;
-  margin-right: auto;
-  width: 50%;
-  padding: 70px;
-  font-size: 50px;
-  width: 50px;
-  text-decoration: none;
-  color: yellow;
-}
-
 @media screen and (max-width: 1020px) {
-  #social {
+  a {
     display: flex;
+    margin-left: 75px;
   }
-}
-
-a:hover {
-  transform: scale(1.1);
 }
 
 #darkmode {
@@ -240,40 +224,40 @@ input:checked + .slider .off {
   color: black;
 }
 
-/* Style inputs with type="text", select elements and textareas */
-input[type="text"],
-select,
-textarea {
-  width: 100%; /* Full width */
-  padding: 12px; /* Some padding */
-  border: 1px solid #ccc; /* Gray border */
-  border-radius: 25px; /* Rounded borders */
-  box-sizing: border-box; /* Make sure that padding and width stays in place */
-  margin-top: 6px; /* Add a top margin */
-  margin-bottom: 16px; /* Bottom margin */
-  resize: vertical; /* Allow the user to vertically resize the textarea (not horizontally) */
+#social {
+  padding-left: 135px;
+  padding-right: 135px;
 }
 
-/* Style the submit button with a specific background color etc */
-input[type="submit"] {
-  background-color: #a3a5c3;
-  color: white;
-  padding: 12px 20px;
+a {
+  display: inline-block;
+  padding: 16px 8px;
+  width: 50%;
+  padding: 70px;
+  font-size: 50px;
+  width: 50px;
+  text-decoration: none;
+  color: yellow;
+}
+
+a:hover {
+  transform: scale(1.1);
+}
+
+#contactForm {
+  position: relative;
+  display: space;
+  text-align: center;
+  font-family: "Source Code Pro", monospace;
+  font-size: 20px;
+  font-weight: bold;
+  color: yellow;
   border: none;
-  border-radius: 4px;
-  cursor: pointer;
 }
 
-/* When moving the mouse over the submit button, add a darker green color */
-input[type="submit"]:hover {
-  background-color: yellow;
-}
-
-/* Add a background color and some padding around the form */
-.container {
-  border-radius: 5px;
-  background-color: #f2f2f2;
-  padding: 20px;
+#field {
+  border-radius: 25px;
+  border: none;
 }
 
 .dark-mode-theme {
